--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -39,11 +39,11 @@
 //
 // Grayscale and brand colors for use across Bootstrap.
 
-//$gray-dark:                 #373a3c !default;
+$gray-dark:                   #100403;
 $gray:                        #8b9090;
 //$gray-light:                #818a91 !default;
 //$gray-lighter:              #eceeef !default;
-//$gray-lightest:             #f7f7f9 !default;
+$gray-lightest:               #F4F3F1;
 
 $brand-primary:               #343642;
 $brand-secondary:             #8a2e3f;
@@ -57,8 +57,8 @@ $brand-secondary:             #8a2e3f;
 ////
 //// Quickly modify global styling by enabling or disabling optional features.
 //
-//$enable-flex:               false !default;
-//$enable-rounded:            true !default;
+$enable-flex:                 true;
+$enable-rounded:              false;
 //$enable-shadows:            false !default;
 //$enable-gradients:          false !default;
 //$enable-transitions:        false !default;
@@ -73,27 +73,39 @@ $brand-secondary:             #8a2e3f;
 //// variables. Mostly focused on spacing.
 //// You can add more entries to the $spacers map, should you need more variation.
 //
-//$spacer:   1rem !default;
-//$spacer-x: $spacer !default;
-//$spacer-y: $spacer !default;
-//$spacers: (
-//        0: (
-//                x: 0,
-//                y: 0
-//        ),
-//        1: (
-//                x: $spacer-x,
-//                y: $spacer-y
-//        ),
-//        2: (
-//                x: ($spacer-x * 1.5),
-//                y: ($spacer-y * 1.5)
-//        ),
-//        3: (
-//                x: ($spacer-x * 3),
-//                y: ($spacer-y * 3)
-//        )
-//) !default;
+$spacer:   1rem;
+$spacer-x: $spacer;
+$spacer-y: $spacer;
+$spacers: (
+        0: (
+                x: 0,
+                y: 0
+        ),
+        1: (
+                x: $spacer-x,
+                y: $spacer-y
+        ),
+        2: (
+                x: ($spacer-x * 1.5),
+                y: ($spacer-y * 1.5)
+        ),
+        3: (
+                x: ($spacer-x * 3),
+                y: ($spacer-y * 3)
+        ),
+        4: (
+                x: ($spacer-x * 4),
+                y: ($spacer-y * 4)
+        ),
+        5: (
+                x: ($spacer-x * 5),
+                y: ($spacer-y * 5)
+        ),
+        6: (
+                x: ($spacer-x * 6),
+                y: ($spacer-y * 6)
+        )
+) !default;
 //$border-width: 1px !default;
 //
 //
@@ -102,7 +114,7 @@ $brand-secondary:             #8a2e3f;
 //// Settings for the `<body>` element.
 //
 //$body-bg:    #fff !default;
-//$body-color: $gray-dark !default;
+$body-color:   $brand-primary;
 //
 //
 //// Links
@@ -111,8 +123,8 @@ $brand-secondary:             #8a2e3f;
 //
 //$link-color:            $brand-primary !default;
 //$link-decoration:       none !default;
-//$link-hover-color:      darken($link-color, 15%) !default;
-//$link-hover-decoration: underline !default;
+$link-hover-color:        $gray;
+$link-hover-decoration:   none !default;
 //
 //
 //// Grid breakpoints
@@ -158,24 +170,29 @@ $brand-secondary:             #8a2e3f;
 //$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif !default;
 //$font-family-serif:      Georgia, "Times New Roman", Times, serif !default;
 //$font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
-//$font-family-base:       $font-family-sans-serif !default;
+//$font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+//$font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$font-family-portmanteau:  'portmanteau', Serif;
+$font-family-old-newspaper:  'oldnewspapertypes', Serif;
+$font-family-amatic:  'amatic_sc', Serif;
+$font-family-base:       $font-family-old-newspaper;
 //
 //// Pixel value used to responsively scale all typography. Applied to the `<html>` element.
 //$font-size-root: 16px !default;
 //
-//$font-size-base: 1rem !default;
-//$font-size-lg:   1.25rem !default;
-//$font-size-sm:   .875rem !default;
-//$font-size-xs:   .75rem !default;
+$font-size-base: 1.4rem;
+$font-size-lg:   1.8rem;
+$font-size-sm:   1.2rem;
+$font-size-xs:   1rem;
 //
 //$line-height-base: 1.5 !default;
 //
-//$font-size-h1: 2.5rem !default;
-//$font-size-h2: 2rem !default;
-//$font-size-h3: 1.75rem !default;
-//$font-size-h4: 1.5rem !default;
-//$font-size-h5: 1.25rem !default;
-//$font-size-h6: 1rem !default;
+$font-size-h1: 3.4rem;
+$font-size-h2: 2.4rem;
+$font-size-h3: 2.1rem;
+$font-size-h4: 1.8rem;
+$font-size-h5: 1.4rem;
+$font-size-h6: 1.2rem;
 //
 //$display1-size: 6rem !default;
 //$display2-size: 5.5rem !default;
@@ -187,9 +204,9 @@ $brand-secondary:             #8a2e3f;
 //$display3-weight: 300 !default;
 //$display4-weight: 300 !default;
 //
-//$headings-margin-bottom: ($spacer / 2) !default;
-//$headings-font-family:   inherit !default;
-//$headings-font-weight:   500 !default;
+$headings-margin-bottom: $spacer;
+$headings-font-family:   $font-family-portmanteau;
+$headings-font-weight:   normal;
 //$headings-line-height:   1.1 !default;
 //$headings-color:         inherit !default;
 //
